feat: implement popup and post preview

--- a/src/sassStyles/_variables.scss
+++ b/src/sassStyles/_variables.scss
@@ -3,8 +3,10 @@ $black: #000000;
 $IRONBREAKER-METAL: #a1a6ac;
 $STARFLEET-BLUE:#0192ff;
 $SPACE-DUST: #00249c;
+$WHALE-GREY: #5b676C;
 
 $color-light-s: $white;
 $color-dark-s: $IRONBREAKER-METAL;
+$color-dark-m: $WHALE-GREY;
 $color-blue-s: $STARFLEET-BLUE;
 $color-blue-m: $SPACE-DUST;
