--- a/src/App.scss
+++ b/src/App.scss
@@ -47,5 +47,11 @@ h1, h2, h3, h4, h5, h6, p, span, a, ul, li {
   border-radius: 28px;
 
 }
+.title {
+  color: $color-blue-m;
+  font-size: 45px;
+  text-align: center;
+  margin-bottom: 40px;
+}
 
 
