--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,7 +5,6 @@
   justify-content: space-between;
   align-items: center;
 
-
   .logo {
     img {
       max-height: 100px;
@@ -17,13 +16,32 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 30px;
+    gap: 20px;
+    width: 100%;
+    padding: 0;
     li {
       list-style-type: none;
+
       a {
         text-decoration: none;
+        font-size: 14px;
 
       }
     }
+  }
+}
+@media (min-width: 1200px) {
+  .header{
+    nav ul{
+      gap: 30px;
+      li {
+        a {
+          font-size: 20px;
+
+        }
+      }
+
+    }
+
   }
 }
